# knark

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: coverage.yml  docker-publish.yml  python-package.yml
frigate/: config.yml
go2rtc/: docker-compose.yml  go2rtc.yaml
knarkscan/: conf.py  config.yaml  cons.py  main.py  qr.py  qr_image_scanner.py  qr_video_scanner.py  stream.py
knarkscan/tests/: test_cons.py
src/barcode/: cons.py  dm.py  main.py
src/qr/: __init__.py  conf.py  conf.yaml  main.py  qr.py  qr_video_scanner.py  streamcap.py
