[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knarkscan"
version = "0.0.1.9000"
authors = [{ name = "Are Edvardsen", email = "are.edvardsen@hnikt.no" }]
description = "Scan and decode barcode from image stream"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	"addict",
	"argparse",
	"paho-mqtt",
	"opencv-python-headless",
	"imutils",
	"pylibdmtx",
	"pyyaml",
	"pyzbar",
	"schema",
]

[project.urls]
Homepage = "https://github.com/areedv/knark"
Issues = "https://github.com/areedv/knark/issues"

[tool.hatch.build.targets.wheel]
packages = ["knarkscan"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
